--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "EpicAPI",
+  "name": "rpg-auth",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "OAuth2 API",
+  "main": "node index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --trace-warnings index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "seditionist",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
