--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "rpg-auth",
   "version": "1.0.0",
   "description": "OAuth2 API",
-  "main": "node index.js",
+  "main": "build/index.js",
   "scripts": {
-    "start": "node --trace-warnings index.js"
+    "prebuild": "eslint --fix --ext .ts,.tsx .",
+    "postinstall": "npm run build",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "watch": "tsc --watch",
+    "start": "node ./build/index.js"
   },
   "keywords": [],
   "author": "seditionist",
@@ -16,5 +21,15 @@
     "helmet": "^4.4.1",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.31",
+    "@types/passport": "^1.0.6",
+    "@types/passport-discord": "^0.1.3",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.21.0",
+    "typescript": "^4.2.2"
   }
 }
