--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "lint": "eslint --fix --ext .ts,.tsx .",
-	"devbuild": "npm run lint && npm run postinstall",
+    "devbuild": "npm run lint && npm run postinstall",
     "postinstall": "npm run build",
     "build": "tsc",
     "prestart": "npm run build",
@@ -21,12 +21,14 @@
     "eslint-config-standard": "^16.0.2",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.31",
     "@types/passport": "^1.0.6",
     "@types/passport-discord": "^0.1.3",
