--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "seditionist",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-config-standard": "^16.0.2",
@@ -26,6 +28,7 @@
     "passport-discord": "^0.1.4"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
