--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "devbuild": "npm run lint && npm run postinstall",
     "postinstall": "npm run build",
     "build": "tsc",
-    "prestart": "npm run build",
+	"clientBuild": "cd client && npm i && npm run build",
+    "prestart": "npm run build && npm run clientBuild",
     "watch": "tsc --watch",
     "start": "node ./build/index.js"
   },
