--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "notistack": "^1.0.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-cookies": "^0.1.1",
@@ -21,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "socket.io-client": "^4.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
